--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Face Lock</string>
+    <string name="about_title">Javatechig.com</string>
+    <string name="about_desc">Provides tutorials, tips, examples and source code on leading Java, Android, Blackberry, PhoneGap and other mobile technologies.</string>
+    <string name="action_about">About</string>
+    <string name="hello_world">Hello world!</string>
 </resources>
